# isaaclab-template

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
src/custom_tasks/direct/: __init__.py
src/custom_tasks/direct/cartpole_custom/: __init__.py  cartpole_env.py
src/custom_tasks/direct/cartpole_custom/agents/: rsl_rl_ppo_cfg.py
src/rsl_rl/: train.py
