[project]
name = "isaac-uv-template"
version = "0.1.0"
description = "Template project for IsaacLab with uv"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
  "isaacsim[all,extscache]==4.5.0",
  "isaaclab",
  "isaaclab_assets",
  "isaaclab_mimic",
  "isaaclab_rl[rsl-rl]",
  "isaaclab_tasks",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
isaacsim = { index = "nvidia" }
isaaclab = { path = "IsaacLab/source/isaaclab", editable = true }
isaaclab_assets = { path = "IsaacLab/source/isaaclab_assets", editable = true }
isaaclab_mimic = { path = "IsaacLab/source/isaaclab_mimic", editable = true }
isaaclab_rl = { path = "IsaacLab/source/isaaclab_rl", editable = true }
isaaclab_tasks = { path = "IsaacLab/source/isaaclab_tasks", editable = true }


[[tool.uv.index]]
name    = "pypi"
url     = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url  = "https://pypi.nvidia.com"
explicit = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Linux"
extraPaths = [
  "IsaacLab/source/isaaclab",
  "IsaacLab/source/isaaclab_assets",
  "IsaacLab/source/isaaclab_mimic",
  "IsaacLab/source/isaaclab_rl",
  "IsaacLab/source/isaaclab_tasks",
]